--- a/desktop/rosif.desktop
+++ b/desktop/rosif.desktop
@@ -3,7 +3,6 @@
 Type=Application
 Version=1.0
 Name=rosif
-Exec=/usr/bin/python3 /home/yudai/rosif/main.py %f
-Icon=ros
-MimeType=application/vnd.sqlite3;
+Exec=/usr/bin/python3 PATH/rosif %f
+Icon=rosif
 Terminal=true
